# pyrofling

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  blit.frag  build-android.sh  build-ffmpeg-android.sh  build-ffmpeg-mingw-shared.sh  build-ffmpeg-mingw.sh  build-ffmpeg-msys2-shared.sh  build-ffmpeg-msys2.sh  build-ffmpeg-static.sh  build-ffmpeg-steamrt-helper.sh  build-ffmpeg-steamrt.sh  build-steamrt-helper.sh  build-steamrt.sh  debug_mesh.frag  ffmpeg-android-enable-mediacodec.patch  line_ui.vert  pad_handler.cpp  pad_handler.hpp  pyrofling.cpp  pyrofling_app_query.cpp  pyrofling_gamepad.cpp  pyrofling_latency_tester.cpp  pyrofling_viewer.cpp  quad.vert  setup_android_build.sh  simple_socket.cpp  simple_socket.hpp  slangmosh.hpp  slangmosh.json  slangmosh.sh  slangmosh_blit.hpp  slangmosh_blit.json  slangmosh_decode.hpp  slangmosh_encode.hpp  sprite.frag  sprite.vert  (+4 more)
capture-layer/: CMakeLists.txt  VkLayer_pyrofling_capture.json.in  capture_layer.cpp
cross-wsi-layer/: CMakeLists.txt  VkLayer_pyrofling_cross_wsi.json.in  cross_wsi_layer.cpp
examples/: CMakeLists.txt  echo.cpp  pyro.cpp  vulkan_encode.cpp
ipc/: CMakeLists.txt  client.cpp  client.hpp  file_handle.cpp  file_handle.hpp  listener.cpp  listener.hpp  messages.cpp  messages.hpp
latency-measurement-layer/: CMakeLists.txt  README.md  VkLayer_pyrofling_latency_measurement.json.in  analyze_run.py  latency_measurement_layer.cpp
layer/: CMakeLists.txt  VkLayer_pyrofling_capture.json.in  dispatch.cpp  dispatch_helper.hpp
layer-util/: CMakeLists.txt  dispatch_helper.cpp  dispatch_helper.hpp  dispatch_wrapper.hpp
lt/: CMakeLists.txt  lt_decode.cpp  lt_decode.hpp  lt_encode.cpp  lt_encode.hpp  lt_lut.cpp  lt_lut.hpp  lt_shuffle.cpp  lt_shuffle.hpp  lt_test.cpp
patches/: vvl-sanity.patch
proto/: CMakeLists.txt  pyro_protocol.h
pyro-client/: CMakeLists.txt  pyro_client.cpp  pyro_client.hpp
pyro-server/: CMakeLists.txt  pyro_server.cpp  pyro_server.hpp
